@@ -26,6 +26,9 @@ Changes in version 0.2.0.9-alpha - 2007-10-??
     - Correctly check for bad options to the "PublishServerDescriptor"
       config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
     - When we discard a vote as a duplicate, do not report this as an error.
+    - When we're configured to be a v3 authority, but we're only listed
+      as a non-v3 authority in our DirServer line for ourself, correct the
+      listing.
 
   o Minor bugfixes (memory leaks):
     - Stop leaking memory on failing case of base32_decode.  Bugfix on
